fix: footnote alignment

--- a/generic-styles/index.less
+++ b/generic-styles/index.less
@@ -35,6 +35,9 @@
     font-weight: 700;
     margin-right: .5em;
   }
+  li[data-type="footnote-ref"]::before {
+    content: none;
+  }
   code {
     color: #c7254e;
     background-color: #f9f2f4;
